# loki-mcp

./: .gitignore  CLAUDE.md  README.md  flake.nix  pyproject.toml
docker/: alloy-config.alloy  docker-compose.yml  loki-config.yaml  seed-data.py  wait-for-ready.sh
generator/: __main__.py  codegen.py  context_builder.py  loader.py  naming.py
spec/: endpoint-inventory.json
templates/: server.py.j2
tests/: conftest.py  test_integration.py  test_list_tools.py  test_modules.py  test_naming.py
