[project]
name = "loki-mcp"
version = "0.1.0"
description = "AI-friendly MCP server for the Grafana Loki log aggregation system"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["generator"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 30
